--- a/IIO11300Vktehtavat/lotto/lotto.csproj
+++ b/IIO11300Vktehtavat/lotto/lotto.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BBFDB3F8-2232-4C51-A154-1DFFF2E75FE7}</ProjectGuid>
+    <ProjectGuid>{9E446B14-7466-4A4D-AEE9-DCC413B39F3B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tehtava1</RootNamespace>
-    <AssemblyName>Tehtava1</AssemblyName>
+    <RootNamespace>lotto</RootNamespace>
+    <AssemblyName>lotto</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -63,7 +63,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="BLIkkuna.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
