--- a/IIO11300Vktehtavat/Harjoitus3/Harjoitus3.csproj
+++ b/IIO11300Vktehtavat/Harjoitus3/Harjoitus3.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BLSerialisoija.cs" />
     <Compile Include="H3Mittaus.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
